@@ -203,6 +203,11 @@ namespace libtorrent {
 			num_read_ops,
 			num_read_back,
 
+			file_pool_hits,
+			file_pool_misses,
+			file_pool_thread_stall,
+			file_pool_race,
+
 			disk_read_time,
 			disk_write_time,
 			disk_hash_time,
@@ -409,6 +414,7 @@ namespace libtorrent {
 			num_writing_threads,
 			num_running_threads,
 			blocked_disk_jobs,
+			file_pool_size,
 			queued_write_bytes,
 			num_unchoke_slots,
 
